# haskell-tictactoe

./: tictactoe.cabal
src/: Main.hs  TicTacToe.hs
src/TicTacToe/: AI.hs  Basic.hs  Exports.hs  Types.hs
tests/: Main.hs
