name:                tictactoe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tictactoe
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs -Wcompat -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , safe
                     , math-functions
                     , random
  other-modules:       TicTacToe.Types
                     , TicTacToe.Basic
                     , TicTacToe.AI

library
  hs-source-dirs:      src
  exposed-modules:     TicTacToe.Types
                     , TicTacToe.Basic
                     , TicTacToe.AI
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , safe
                     , math-functions
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tictactoe
